--- a/index.html
+++ b/index.html
@@ -38,24 +38,28 @@
                   <div class="nav__mobile">
                     <i class="fa-solid fa-list nav__mobile--icon"></i>
                     <div class="menu__mobile">
-                      <a href="/index.html" class="menu__mobile--log">
+                      <a href="index.html" class="menu__mobile--log">
                         <img src="/assets/imgs/logo.png" alt="" />
                       </a>
                       <ul class="menu__mobile-nav">
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">Home</a>
+                          <a href="index.html" class="mobile__nav-link">Home</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">shop</a>
+                          <a href="shop.html" class="mobile__nav-link">shop</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">blog</a>
+                          <a href="blogs.html" class="mobile__nav-link">blog</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">about</a>
+                          <a href="about.html" class="mobile__nav-link"
+                            >about</a
+                          >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">contact</a>
+                          <a href="contact.html" class="mobile__nav-link"
+                            >contact</a
+                          >
                         </li>
                       </ul>
                     </div>
@@ -262,21 +266,21 @@
                   <nav class="header__nav">
                     <ul class="nav__list">
                       <li class="nav__item">
-                        <a href="/index.html" class="nav__item--link acitve">
+                        <a href="index.html" class="nav__item--link acitve">
                           Home
                         </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/shop.html" class="nav__item--link"> Shop</a>
+                        <a href="shop.html" class="nav__item--link"> Shop</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/about.html" class="nav__item--link">About </a>
+                        <a href="about.html" class="nav__item--link">About </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/contact.html" class="nav__item--link">
+                        <a href="contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -309,13 +313,13 @@
                         <a href="shop.html" class="nav__item--link"> Shop</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/about.html" class="nav__item--link">About </a>
+                        <a href="about.html" class="nav__item--link">About </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/contact.html" class="nav__item--link">
+                        <a href="contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -496,7 +500,7 @@
           <div class="col l-12 m-12 c-12">
             <div class="products__list">
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/1-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -543,7 +547,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/2-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -590,7 +594,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/3-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -634,7 +638,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/4-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -678,7 +682,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/5-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -722,7 +726,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/6-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -766,7 +770,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/7-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -810,7 +814,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="movers">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/8-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -854,7 +858,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="outdoor">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/9-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -898,7 +902,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="outdoor">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/10-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -942,7 +946,7 @@
                 </a>
               </div>
               <div class="col l-3 products__item m-4 c-6" data-filter="outdoor">
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/11-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -989,7 +993,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/12-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -1036,7 +1040,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/13-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -1083,7 +1087,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/15-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -1130,7 +1134,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/16-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -1177,7 +1181,7 @@
                 class="col l-3 products__item m-4 c-6"
                 data-filter="familyes"
               >
-                <a href="/details.html" class="products__card">
+                <a href="details.html" class="products__card">
                   <div class="products__img">
                     <img src="./assets/imgs/18-600x600.jpg" alt="" />
                     <div class="products__controls">
@@ -1471,7 +1475,7 @@
                   </div>
                 </div>
               </div>
-              <a href="/blogs.html" class="posts__btn">
+              <a href="blogs.html" class="posts__btn">
                 <button class="btn btn-primary">View All</button>
               </a>
             </div>
@@ -1626,7 +1630,7 @@
                   <h3 class="text-title-s">CUSTOMER SERVICE</h3>
                   <ul class="footer_contents">
                     <li class="footer_contents--item">
-                      <a href="/contact.html" class="footer_contents--link">
+                      <a href="contact.html" class="footer_contents--link">
                         Contact Us</a
                       >
                     </li>
