--- a/details.html
+++ b/details.html
@@ -34,24 +34,28 @@
                   <div class="nav__mobile">
                     <i class="fa-solid fa-list nav__mobile--icon"></i>
                     <div class="menu__mobile">
-                      <a href="/index.html" class="menu__mobile--log">
+                      <a href="index.html" class="menu__mobile--log">
                         <img src="/assets/imgs/logo.png" alt="" />
                       </a>
                       <ul class="menu__mobile-nav">
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">Home</a>
+                          <a href="index.html" class="mobile__nav-link">Home</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">shop</a>
+                          <a href="shop.html" class="mobile__nav-link">shop</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">blog</a>
+                          <a href="blogs.html" class="mobile__nav-link">blog</a>
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">about</a>
+                          <a href="about.html" class="mobile__nav-link"
+                            >about</a
+                          >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="/" class="mobile__nav-link">contact</a>
+                          <a href="contact.html" class="mobile__nav-link"
+                            >contact</a
+                          >
                         </li>
                       </ul>
                     </div>
@@ -269,21 +273,21 @@
                   <nav class="header__nav">
                     <ul class="nav__list">
                       <li class="nav__item">
-                        <a href="/index.html" class="nav__item--link"> Home </a>
+                        <a href="index.html" class="nav__item--link"> Home </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/shop.html" class="nav__item--link acitve">
+                        <a href="shop.html" class="nav__item--link acitve">
                           Shop</a
                         >
                       </li>
                       <li class="nav__item">
-                        <a href="/blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/about.html" class="nav__item--link">About </a>
+                        <a href="about.html" class="nav__item--link">About </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/contact.html" class="nav__item--link">
+                        <a href="contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -316,13 +320,13 @@
                         >
                       </li>
                       <li class="nav__item">
-                        <a href="/blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="/about.html" class="nav__item--link">About </a>
+                        <a href="about.html" class="nav__item--link">About </a>
                       </li>
                       <li class="nav__item">
-                        <a href="/contact.html" class="nav__item--link">
+                        <a href="contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -337,11 +341,11 @@
       <div class="nav__primary">
         <h1 class="nav__primary--title">Shop</h1>
         <div class="nav__primary--link">
-          <a href="/index.html" class="nav__primary--link-more back">Home</a>
+          <a href="index.html" class="nav__primary--link-more back">Home</a>
           <span> / </span>
-          <a href="/shop.html" class="nav__primary--link-more">Shop</a
+          <a href="shop.html" class="nav__primary--link-more">Shop</a
           ><span> / </span>
-          <a href="/details.html" class="nav__primary--link-more present"
+          <a href="details.html" class="nav__primary--link-more present"
             >details</a
           >
         </div>
