--- a/index.html
+++ b/index.html
@@ -38,26 +38,32 @@
                   <div class="nav__mobile">
                     <i class="fa-solid fa-list nav__mobile--icon"></i>
                     <div class="menu__mobile">
-                      <a href="index.html" class="menu__mobile--log">
+                      <a href="./index.html" class="menu__mobile--log">
                         <img src="/assets/imgs/logo.png" alt="" />
                       </a>
                       <ul class="menu__mobile-nav">
                         <li class="mobile__nav-item">
-                          <a href="index.html" class="mobile__nav-link">Home</a>
+                          <a href="./index.html" class="mobile__nav-link"
+                            >Home</a
+                          >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="shop.html" class="mobile__nav-link">shop</a>
+                          <a href="./shop.html" class="mobile__nav-link"
+                            >shop</a
+                          >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="blogs.html" class="mobile__nav-link">blog</a>
+                          <a href="./blogs.html" class="mobile__nav-link"
+                            >blog</a
+                          >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="about.html" class="mobile__nav-link"
+                          <a href="./about.html" class="mobile__nav-link"
                             >about</a
                           >
                         </li>
                         <li class="mobile__nav-item">
-                          <a href="contact.html" class="mobile__nav-link"
+                          <a href="./contact.html" class="mobile__nav-link"
                             >contact</a
                           >
                         </li>
@@ -66,7 +72,7 @@
                     <i class="fa-solid fa-xmark nav__mobile--close"></i>
                     <div class="nav__overlay"></div>
                   </div>
-                  <a href="#" class="header__logo">
+                  <a href="./index.html" class="header__logo">
                     <img src="./assets/imgs/logo.png" alt="" />
                   </a>
                   <form action="" class="header__search">
