--- a/index.html
+++ b/index.html
@@ -272,21 +272,23 @@
                   <nav class="header__nav">
                     <ul class="nav__list">
                       <li class="nav__item">
-                        <a href="index.html" class="nav__item--link acitve">
+                        <a href="./index.html" class="nav__item--link acitve">
                           Home
                         </a>
                       </li>
                       <li class="nav__item">
-                        <a href="shop.html" class="nav__item--link"> Shop</a>
+                        <a href="./shop.html" class="nav__item--link"> Shop</a>
                       </li>
                       <li class="nav__item">
-                        <a href="blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="./blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="about.html" class="nav__item--link">About </a>
+                        <a href="./about.html" class="nav__item--link"
+                          >About
+                        </a>
                       </li>
                       <li class="nav__item">
-                        <a href="contact.html" class="nav__item--link">
+                        <a href="./contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -311,21 +313,23 @@
                   <nav class="header__nav fixed">
                     <ul class="nav__list">
                       <li class="nav__item">
-                        <a href="index.html" class="nav__item--link acitve">
+                        <a href="./index.html" class="nav__item--link acitve">
                           Home
                         </a>
                       </li>
                       <li class="nav__item">
-                        <a href="shop.html" class="nav__item--link"> Shop</a>
+                        <a href="./shop.html" class="nav__item--link"> Shop</a>
                       </li>
                       <li class="nav__item">
-                        <a href="blogs.html" class="nav__item--link"> Blog</a>
+                        <a href="./blogs.html" class="nav__item--link"> Blog</a>
                       </li>
                       <li class="nav__item">
-                        <a href="about.html" class="nav__item--link">About </a>
+                        <a href="./about.html" class="nav__item--link"
+                          >About
+                        </a>
                       </li>
                       <li class="nav__item">
-                        <a href="contact.html" class="nav__item--link">
+                        <a href="./contact.html" class="nav__item--link">
                           Contact</a
                         >
                       </li>
@@ -1481,7 +1485,7 @@
                   </div>
                 </div>
               </div>
-              <a href="blogs.html" class="posts__btn">
+              <a href="./blogs.html" class="posts__btn">
                 <button class="btn btn-primary">View All</button>
               </a>
             </div>
