--- a/about.html
+++ b/about.html
@@ -353,7 +353,7 @@
           <div class="row">
             <div class="col l-12 m-12 c-12">
               <div class="about__container">
-                <img src="/assets/imgs/about-us-banner1.jpg" alt="" />
+                <img src="./assets/imgs/about-us-banner1.jpg" alt="" />
                 <h3 class="about__title">
                   We are a digital agency focused on delivering content and
                   utility user-experiences.
@@ -367,7 +367,7 @@
                   accumsan. Iaculis ac fringilla torquent lorem consectetuer,
                   sociosqu phasellus risus urna aliquam, ornare.
                 </p>
-                <img src="/assets/imgs/about-us-signature.png" alt="" />
+                <img src="./assets/imgs/about-us-signature.png" alt="" />
               </div>
             </div>
           </div>
@@ -381,7 +381,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about_icon1.png" alt="" />
+                      <img src="./assets/imgs/about_icon1.png" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">Creative Design</h4>
@@ -395,7 +395,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about_icon2.png" alt="" />
+                      <img src="./assets/imgs/about_icon2.png" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">
@@ -411,7 +411,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about_icon3.png" alt="" />
+                      <img src="./assets/imgs/about_icon3.png" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">Online Support 24/7</h4>
@@ -435,7 +435,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about-us-banner2-1.jpg" alt="" />
+                      <img src="./assets/imgs/about-us-banner2-1.jpg" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">What do we do?</h4>
@@ -451,7 +451,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about-us-banner2-2.jpg" alt="" />
+                      <img src="./assets/imgs/about-us-banner2-2.jpg" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">Our Mission</h4>
@@ -467,7 +467,7 @@
                 <div class="col l-4 m-12 c-12">
                   <div class="about-content-item">
                     <div class="about-content-icon">
-                      <img src="/assets/imgs/about-us-banner2-3.jpg" alt="" />
+                      <img src="./assets/imgs/about-us-banner2-3.jpg" alt="" />
                     </div>
                     <div class="about-content-content">
                       <h4 class="about-content-title">History Of Us</h4>
