--- a/index.html
+++ b/index.html
@@ -112,11 +112,47 @@
                     <div class="header__controls--item">
                       <a href="#" class="header__controls--link cart">
                         <i class="fa-solid fa-cart-shopping"></i>
-                        <span class="cart__ptl">0</span>
+                        <span class="cart__ptl">2</span>
                       </a>
-                      <div class="controls__sub">
+                      <div class="controls__sub size-l">
                         <div class="cart__null">
                           <p>No products in the cart.</p>
+                        </div>
+                        <div class="cart__active">
+                          <div class="cart__product">
+                            <div class="cart__product-img">
+                              <img src="./assets/imgs/1-600x600.jpg" alt="" />
+                            </div>
+                            <div class="cart__product-info">
+                              <span class="cart__product-name"
+                                >Placerat Vestibulum</span
+                              >
+                              <div class="cart__product-qtl">
+                                <span class="cart__product-pice">1 x</span>
+                                <span class="cart__product-pice">50.00 $</span>
+                              </div>
+                            </div>
+                            <i
+                              class="fa-solid fa-xmark cart__product-remove"
+                            ></i>
+                          </div>
+                          <div class="cart__product">
+                            <div class="cart__product-img">
+                              <img src="./assets/imgs/1-600x600.jpg" alt="" />
+                            </div>
+                            <div class="cart__product-info">
+                              <span class="cart__product-name"
+                                >Placerat Vestibulum</span
+                              >
+                              <div class="cart__product-qtl">
+                                <span class="cart__product-pice">1 x</span>
+                                <span class="cart__product-pice">50.00 $</span>
+                              </div>
+                            </div>
+                            <i
+                              class="fa-solid fa-xmark cart__product-remove"
+                            ></i>
+                          </div>
                         </div>
                       </div>
                     </div>
